@@ -12,8 +12,28 @@ require 'rubygems/user_interaction'
 class MockGemUi < Gem::StreamUI
   class TermError < RuntimeError; end
 
-  def initialize(input="")
-    super(StringIO.new(input), StringIO.new, StringIO.new)
+  module TTY
+
+    attr_accessor :tty
+
+    def tty?()
+      @tty = true if @tty.nil?
+      @tty
+    end
+
+  end
+
+  def initialize(input = "")
+    ins = StringIO.new input
+    outs = StringIO.new
+    errs = StringIO.new
+
+    ins.extend TTY
+    outs.extend TTY
+    errs.extend TTY
+
+    super ins, outs, errs
+
     @terminated = false
   end
 
