@@ -5,6 +5,8 @@
 	DependencyInstaller's source_index so reinstallation via -i does not
 	fail.
 	* lib/rubygems/uninstaller.rb:  Add #gem_home, #bin_dir for hooks.
+	* lib/rubygems/commands/query_command.rb:  Don't print LOCAL/REMOTE
+	gems if stdout is not a TTY.
 
 2008-06-30  Eric Hodel  <drbrain@segment7.net>
 
